--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -46,6 +47,7 @@ nav span{
   cursor:pointer;
 }
 
+/* SECTIONS */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -60,42 +62,32 @@ nav span{
   max-width:1100px;
 }
 
+/* TITLES */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
+/* HERO */
 .section.hero{
   align-items:center;
 }
 
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
-  margin-left:-4px;
 }
 
 .hero-sub{
   margin-top:24px;
-  padding-left:4px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-.section-block p{
-  margin-top:8px;
-  padding-left:8px;
-  font-size:15px;
-  color:#aaa;
-  max-width:700px;
-  line-height:1.6;
-  text-align:justify;
-}
-
+/* ABOUT */
 .about{
   display:flex;
-  align-items:flex-start;
   margin-top:12px;
 }
 
@@ -107,51 +99,43 @@ h1{
   opacity:.9;
 }
 
-/* ===== PORTFOLIO ===== */
+.section-block p{
+  font-size:15px;
+  color:#aaa;
+  max-width:700px;
+  line-height:1.6;
+  text-align:justify;
+}
+
+/* PORTFOLIO */
 .portfolio-wrapper{
-  position:relative;
   margin-top:32px;
   margin-left:8px;
   overflow:hidden;
   padding-right:120px;
+  position:relative;
 }
 
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
-  top:0;
   right:0;
+  top:0;
   width:120px;
   height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
+  background:linear-gradient(to right,rgba(10,10,10,0),#0a0a0a);
 }
 
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  padding-bottom:20px;
-  scroll-behavior:smooth;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
 }
-
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
   min-width:460px;
   text-decoration:none;
   color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
-}
-
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
 }
 
 .project-image{
@@ -164,26 +148,9 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform .4s ease;
 }
 
-.project-card:hover img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ===== CV ===== */
+/* CV */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -197,21 +164,12 @@ h1{
   width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out;
+  transition:height .4s ease;
 }
 
 .timeline-item{
   position:relative;
   margin-bottom:80px;
-  max-width:520px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
 }
 
 .timeline-item::before{
@@ -233,26 +191,39 @@ h1{
   padding:28px;
 }
 
-/* ===== CONTACTO FRAMER ===== */
+.timeline-card h3{
+  font-size:18px;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  margin-bottom:16px;
+}
+
+.timeline-card strong{
+  display:block;
+  font-size:16px;
+}
+
+.timeline-card span{
+  font-size:13px;
+  color:#888;
+}
+
+/* CONTACT */
 .contact{
   margin-top:48px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
   gap:24px;
-  padding-left:8px;
 }
 
 .contact a{
-  display:flex;
-  flex-direction:column;
-  gap:12px;
   padding:28px;
   border-radius:20px;
   background:rgba(255,255,255,.04);
   border:1px solid rgba(255,255,255,.08);
-  color:#f5f5f5;
   text-decoration:none;
-  transition:.35s ease;
+  color:#f5f5f5;
+  transition:.3s ease;
 }
 
 .contact a span{
@@ -264,8 +235,6 @@ h1{
 
 .contact a:hover{
   transform:translateY(-4px);
-  background:rgba(255,255,255,.06);
-  box-shadow:0 20px 40px rgba(0,0,0,.35);
 }
 </style>
 </head>
@@ -292,15 +261,9 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, flexible y
+        técnico-creativo. Formación en UJI, UPV y Erasmus en Londres. Formación profesional en
+        electricidad y enfoque completo del proceso de diseño.
       </p>
       <img src="foto.jpg">
     </div>
@@ -312,22 +275,8 @@ h1{
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg"></div>
-          <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg"></div>
-          <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg"></div>
-          <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
-        </a>
-
+        <a class="project-card"><div class="project-image"></div></a>
+        <a class="project-card"><div class="project-image"></div></a>
       </div>
     </div>
   </div>
@@ -338,9 +287,46 @@ h1{
     <h1>CV</h1>
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
-      <div class="timeline-item"><div class="timeline-card">UJI</div></div>
-      <div class="timeline-item"><div class="timeline-card">UPV</div></div>
-      <div class="timeline-item"><div class="timeline-card">Erasmus Londres</div></div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
@@ -362,12 +348,15 @@ document.querySelectorAll("nav span").forEach((b,i)=>{
     .scrollIntoView({behavior:"smooth"});
 });
 
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
+const line=document.getElementById("timelineLine");
+const timeline=document.querySelector(".timeline");
 
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
+window.addEventListener("scroll",()=>{
+  if(!timeline||!line) return;
+  const rect=timeline.getBoundingClientRect();
+  const visible=Math.min(window.innerHeight-rect.top,rect.height);
+  line.style.height=Math.max(0,visible)+"px";
+});
 </script>
 
 </body>
