--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -46,6 +47,7 @@ nav span{
   cursor:pointer;
 }
 
+/* SECTIONS */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -60,12 +62,14 @@ nav span{
   max-width:1100px;
 }
 
+/* TITLES */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
+/* HERO */
 .section.hero{
   align-items:center;
 }
@@ -83,13 +87,14 @@ h1{
   color:#777;
 }
 
+/* TEXT */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:700px;
-  line-height:1.6;
+  max-width:720px;
+  line-height:1.65;
   text-align:justify;
 }
 
@@ -133,7 +138,13 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
+  scroll-behavior:smooth;
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
 }
+
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
   min-width:460px;
@@ -141,7 +152,7 @@ h1{
   color:inherit;
   opacity:0;
   transform:translateY(12px);
-  transition:.8s ease;
+  transition:opacity .8s ease, transform .8s ease;
 }
 
 .project-card.is-visible{
@@ -159,9 +170,26 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
+  transition:transform .4s ease;
 }
 
-/* CV TIMELINE */
+.project-card:hover img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
+  font-size:28px;
+  font-weight:400;
+}
+
+.project-inner span{
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
+/* CV */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -274,6 +302,7 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
+<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -281,82 +310,82 @@ h1{
   </div>
 </section>
 
+<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
-        flexible y técnico-creativo. Formación en UJI, UPV y Erasmus en Londres, con base
-        técnica en electricidad y enfoque completo del proceso de diseño.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño.<br><br>
+
+        He cursado mis estudios en la Universitat Jaume I de Castellón, continuado en la Universitat
+        Politècnica de València y completado con un programa Erasmus en Londres. Cuento además con
+        una formación profesional en electricidad, que me ha aportado una base técnica sólida y una
+        forma de pensar práctica.<br><br>
+
+        Disfruto de todo el proceso de diseño, desde la fase de análisis y conceptualización hasta la
+        materialización del producto, entendiendo el diseño como una herramienta para resolver
+        problemas reales desde una perspectiva funcional, técnica y sensible al contexto.
       </p>
-      <img src="foto.jpg">
+      <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
 
+<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <a class="project-card"><div class="project-image"></div></a>
-        <a class="project-card"><div class="project-image"></div></a>
-        <a class="project-card"><div class="project-image"></div></a>
+
+        <a href="node.html" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"><img src="conceptual.jpg" alt=""></div>
+          <div class="project-inner"><h2>Proyecto conceptual</h2><span>Diseño de producto</span></div>
+        </a>
+
       </div>
     </div>
   </div>
 </section>
 
+<!-- CV -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
 
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Jaume I</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Politècnica de València</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Programa Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Jaume I</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Politècnica de València</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Programa Erasmus</strong><span>Londres</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
 
     </div>
   </div>
 </section>
 
+<!-- CONTACTO -->
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
@@ -369,6 +398,11 @@ h1{
 </section>
 
 <script>
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
+});
+
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
 },{threshold:.2});
@@ -376,19 +410,13 @@ const observer=new IntersectionObserver(entries=>{
 document.querySelectorAll(".project-card,.timeline-item")
   .forEach(el=>observer.observe(el));
 
-const timeline=document.getElementById("timelineLine");
+const line=document.getElementById("timelineLine");
+const timeline=document.querySelector(".timeline");
 
 window.addEventListener("scroll",()=>{
-  const section=document.querySelector(".timeline");
-  if(!section) return;
-  const r=section.getBoundingClientRect();
+  const r=timeline.getBoundingClientRect();
   const h=Math.min(window.innerHeight-r.top,r.height);
-  timeline.style.height=Math.max(0,h)+"px";
-});
-
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
+  line.style.height=Math.max(0,h)+"px";
 });
 </script>
 
