--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:720px;
-  line-height:1.65;
+  max-width:700px;
+  line-height:1.6;
   text-align:justify;
 }
 
@@ -122,29 +122,12 @@ h1{
   padding-right:120px;
 }
 
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
-}
-
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  scroll-behavior:smooth;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
 }
-
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
   min-width:460px;
@@ -152,7 +135,7 @@ h1{
   color:inherit;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s ease;
 }
 
 .project-card.is-visible{
@@ -170,26 +153,9 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform .4s ease;
 }
 
-.project-card:hover img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* CV */
+/* ===== CV (AJUSTADO) ===== */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -209,7 +175,7 @@ h1{
 .timeline-item{
   position:relative;
   margin-bottom:80px;
-  max-width:520px;
+  max-width:460px; /* 🔧 REDUCIDO */
   opacity:0;
   transform:translateY(20px);
   transition:.8s ease;
@@ -257,7 +223,7 @@ h1{
   color:#888;
 }
 
-/* CONTACT FRAMER */
+/* CONTACT */
 .contact{
   margin-top:48px;
   display:grid;
@@ -284,10 +250,6 @@ h1{
   letter-spacing:.18em;
   text-transform:uppercase;
   color:#888;
-}
-
-.contact a:hover{
-  transform:translateY(-4px);
 }
 </style>
 </head>
@@ -320,46 +282,13 @@ h1{
         enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
         a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
         ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón, continuado en la Universitat
-        Politècnica de València y completado con un programa Erasmus en Londres. Cuento además con
-        una formación profesional en electricidad, que me ha aportado una base técnica sólida y una
-        forma de pensar práctica. Disfruto de todo el proceso de diseño, desde la fase de análisis y conceptualización hasta la
-        materialización del producto, entendiendo el diseño como una herramienta para resolver
-        problemas reales desde una perspectiva funcional, técnica y sensible al contexto.
+        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
+        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
+        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
+        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
+        desde la fase de análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="">
-    </div>
-  </div>
-</section>
-
-<!-- PORTFOLIO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
-          <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
-          <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
-          <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-image"><img src="conceptual.jpg" alt=""></div>
-          <div class="project-inner"><h2>Proyecto conceptual</h2><span>Diseño de producto</span></div>
-        </a>
-
-      </div>
     </div>
   </div>
 </section>
@@ -381,29 +310,12 @@ h1{
   </div>
 </section>
 
-<!-- CONTACTO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
-      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn<span>Perfil profesional</span></a>
-    </div>
-  </div>
-</section>
-
 <script>
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
-
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
 },{threshold:.2});
 
-document.querySelectorAll(".project-card,.timeline-item")
+document.querySelectorAll(".timeline-item")
   .forEach(el=>observer.observe(el));
 
 const line=document.getElementById("timelineLine");
@@ -413,6 +325,11 @@ window.addEventListener("scroll",()=>{
   const r=timeline.getBoundingClientRect();
   const h=Math.min(window.innerHeight-r.top,r.height);
   line.style.height=Math.max(0,h)+"px";
+});
+
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
 });
 </script>
 
